--- a/edu_parent/common/service_base/pom.xml
+++ b/edu_parent/common/service_base/pom.xml
@@ -10,5 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>service_base</artifactId>
 
+    <dependencies>
+        <!--统一返回结果-->
+        <dependency>
+            <groupId>com.zzn</groupId>
+            <artifactId>common-utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
